--- a/tasks/letsencrypt.yml
+++ b/tasks/letsencrypt.yml
@@ -1,11 +1,39 @@
 ---
 
-- name: Install certbot-auto
-  get_url:
-    url: https://dl.eff.org/certbot-auto
-    dest: /usr/bin/certbot-auto
-    mode: "a+x"
-  when: nginx_revproxy_certbot_auto
+- name: Install snapd
+  package:
+    name: snapd
+    state: present
+  when: nginx_revproxy_certbot_snap
+  tags:
+    - lesencrypt
+    - nginxrevproxy
+
+- name: Install core snap
+  snap:
+    name: core
+    state: present
+  when: nginx_revproxy_certbot_snap
+  tags:
+    - lesencrypt
+    - nginxrevproxy
+
+- name: Install certbot from snap
+  snap:
+    name: certbot
+    state: present
+    classic: yes
+  when: nginx_revproxy_certbot_snap
+  tags:
+    - lesencrypt
+    - nginxrevproxy
+
+- name: Prepare the certbot command
+  file:
+    src: /snap/bin/certbot
+    dest: /usr/bin/certbot
+    state: link
+  when: nginx_revproxy_certbot_snap
   tags:
     - lesencrypt
     - nginxrevproxy
@@ -14,7 +42,7 @@
   apt:
     name: "{{ nginx_revproxy_certbot_packages }}"
     state: present
-  when: not nginx_revproxy_certbot_auto
+  when: not nginx_revproxy_certbot_snap
   tags:
     - lesencrypt
     - nginxrevproxy
@@ -73,7 +101,7 @@
 
 - name: Generate certs (first time)
   command: |
-    certbot{{ '-auto' if nginx_revproxy_certbot_auto else '' }} certonly
+    certbot certonly
     --webroot -w /var/www/{{ item.key }}
     -d {{ item.value.domains | join(' -d ') }}
     --email {{ item.value.letsencrypt_email }}
@@ -103,8 +131,7 @@
 - name: Insert cert-bot renew in crontab
   cron:
     name: "cert-bot renew"
-    job: "certbot{{ '-auto' if nginx_revproxy_certbot_auto else '' }} \
-renew --post-hook \"systemctl reload nginx\" >> /var/log/letsencrypt/letsencrypt-update.log 2>&1"
+    job: "certbot renew --post-hook \"systemctl reload nginx\" >> /var/log/letsencrypt/letsencrypt-update.log 2>&1"
     hour: "3"
     minute: "30"
     weekday: "1"
