--- a/tasks/letsencrypt.yml
+++ b/tasks/letsencrypt.yml
@@ -115,7 +115,7 @@
 
 - name: Update Site Config
   template:
-    src: reverseproxy_ssl.conf.j2
+    src: reverseproxy.conf.j2
     dest: /etc/nginx/sites-available/{{ item.key }}.conf
     owner: root
     group: root
